Address deprecation issues